Slides in the right order, tasks->lists

--- a/frontend/core/src/main/webapp/static/partials/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/tasksSlides.html
@@ -4,8 +4,8 @@
       <div class="swiper-slide" inbox></div>
       <div class="swiper-slide" home></div>
       <div class="swiper-slide" dates></div>
+      <div class="swiper-slide" lists></div>
       <div class="swiper-slide" projects></div>
-      <div class="swiper-slide" tasks></div>
       <!-- areas -->
       <!-- contexts -->
       <!-- single tasks -->
