Fixed normalize.css not compiling with maven

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,4 +1,4 @@
-@import (less) "normalize.css";
+@import "normalize.less";
 @import "variables.less";
 @import "idangerous.swiper.less";
 @import "common.less";
