--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,4 +1,5 @@
 @import (less) "normalize.css";
+@import "icomoon.less";
 @import "variables.less";
 @import "idangerous.swiper.less";
 @import "common.less";
