--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -16,7 +16,7 @@ html {
   height: 100%;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
-  body, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-columns-grid, .column {
+  body, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
     height: inherit;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
