--- a/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
@@ -1,5 +1,5 @@
 <nav id="feature-header" role="navigation">
-  <div class="left-of-three" id="collective"></div>
+  <div class="left-of-three" id="collective">&nbsp;</div>
   <div class="center-of-three" id="feature-heading">{{feature}}</div>
   <div class="right-of-three" id="add-new-button">
     <button type="button" class="plus" ng-click="addNew()">+</button>
