--- a/frontend/core/src/main/webapp/static/partials/pages/home.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/home.html
@@ -1,8 +1,8 @@
 <section id="home" class="one-column-grid page">
   <div class="column">
-    <div main-header id="main-header-container" class="header-container"></div>
+    <div ng-hide="omniBarActive" main-header id="main-header-container" class="header-container"></div>
     <div id="main-content-container" class="content-container">
-      <div class="banner">
+      <div ng-hide="omniBarActive" class="banner">
         <img src="static/img/em_logo.png" alt="extended mind"/>
       </div>
       <div class="content">
