--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -107,8 +107,17 @@ section#home {
   }
 }
 
-// INBOX
+// TASKS DATES
 
-section#inbox {
-
+section#tasks-dates {
+  #tasks-dates-feature-content-container {
+    .date-container{
+      height: inherit;
+      padding-bottom: @footer-height;
+      .date {
+        height: inherit;
+        overflow-y: auto;
+      }
+    }
+  }
 }
