--- a/frontend/core/src/main/webapp/static/partials/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/tasksSlides.html
@@ -1,5 +1,5 @@
 <div class="slides-container">
-  <div class="swiper-container" em-swiper-slider="horizontal">
+  <div class="swiper-container main-slides" em-swiper-slider="horizontal">
     <div class="swiper-wrapper">
       <div class="swiper-slide" inbox></div>
       <div class="swiper-slide" home></div>
