--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/dateSlide.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/dateSlide.html
@@ -1,5 +1,4 @@
-<div>
+<div class="date">
   <h3>{{date.displayDate}}</h3>
   <div tasks-list="tasks" subtask="subtaskWithDate" tasks-filter="filter"></div>
-
 </div>
