--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -36,7 +36,7 @@ section#login {
 // HOME
 
 section#home {
-  #main-header-container {
+  header#main-header {
     min-height: @main-header-height;
     #menu-content {
       background-color: white;
@@ -44,7 +44,7 @@ section#home {
       padding-top: 10px;
       .top-bottom-borders;
     }
-    nav#main-header {
+    nav {
       max-width: @one-column-grid-width;
       text-align: right;
       margin-right: auto;
