--- a/frontend/core/src/main/webapp/static/partials/pages/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/inbox.html
@@ -1,7 +1,7 @@
 
 <section id="inbox" class="two-column-grid page">
   <div class="column">
-    <div id="inbox-feature-header-container" class="header-container feature-header-container" feature-header="inbox"></div>
+    <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
       <ul>
         <li ng-class="selected" ng-repeat="item in items">
