--- a/frontend/core/src/main/webapp/static/partials/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/tasksSlides.html
@@ -11,5 +11,5 @@
       <!-- single tasks -->
     </div>
   </div>
-  <div class="footer-container" em-footer mainlinksfilter="newItem.title"></div>
+  <footer ng-hide="mainlinksFilter" em-footer mainlinksfilter="newItem.title"></footer>
 </div>
