--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -1,4 +1,4 @@
-<nav id="main-header" role="navigation">
+<nav role="navigation">
   <div id="menu-icon">
     <button id="menu-button" 
             type="button" 
