--- a/frontend/core/src/main/webapp/static/partials/pages/home.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/home.html
@@ -1,6 +1,6 @@
 <section id="home" class="one-column-grid page">
   <div class="column">
-    <div ng-hide="omniBarActive" main-header id="main-header-container" class="header-container"></div>
+    <header ng-hide="omniBarActive" main-header id="main-header"></header>
     <div id="main-content-container" class="content-container">
       <div ng-hide="omniBarActive" class="banner">
         <img src="static/img/em_logo.png" alt="extended mind"/>
