--- a/frontend/core/src/main/webapp/static/partials/pages/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/tasks/dates.html
@@ -1,6 +1,6 @@
 <section id="tasks-dates" class="two-column-grid page">
   <div class="column">
-    <div id="tasks-dates-feature-header-container" class="header-container feature-header-container" feature-header="dates"></div>
+    <header id="tasks-dates-header" class="feature-header" feature-header="dates"></header>
     <div id="tasks-dates-feature-content-container" class="content-container feature-content-container">
       <div class="swiper-no-swiping" id="date-picker" datebar></div>
       <div class="swiper-container vertical-slides" em-swiper-slider="vertical">
