Layout for lists

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -71,12 +71,13 @@ header {
   height:inherit;
   padding-top: @feature-header-height;
   padding-bottom: @footer-height;
-  ul {
+  .inner-feature-content-container {
     height:inherit;
     position:relative;
     overflow-y: auto;
     display:block;
   }
+
 }
 
 .content-container {
