--- a/frontend/core/src/main/webapp/static/partials/pages/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/inbox.html
@@ -3,7 +3,7 @@
   <div class="column">
     <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
-      <ul>
+      <ul class="inner-feature-content-container">
         <li ng-class="selected" ng-repeat="item in items">
           <div item></div>
         </li>
