--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -121,3 +121,18 @@ section#tasks-dates {
     }
   }
 }
+
+// TASKS PROJECTS
+
+section#tasks-projects {
+  #tasks-projects-feature-content-container {
+    .project-container{
+      height: inherit;
+      .project {
+        height: inherit;
+        overflow-y: auto;
+      }
+    }
+  }
+}
+
