--- a/frontend/core/src/main/webapp/static/partials/pages/tasks/projects.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/tasks/projects.html
@@ -1,9 +1,17 @@
-<div class="swiper-container" em-swiper-slider="vertical">
-  <div class="swiper-wrapper">
-
-    <div class="swiper-slide em-scrollable-inner" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project" swiper-slide="{{project.uuid}}">
-      <div project-slide></div>
+<section id="tasks-projects" class="two-column-grid page">
+  <div class="column">
+    <header id="tasks-projects-header" class="feature-header" feature-header="projects"></header>
+    <div id="tasks-projects-feature-content-container" class="content-container feature-content-container">
+      <div class="swiper-container vertical-slides" em-swiper-slider="vertical">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project" swiper-slide="{{project.uuid}}">
+            <div class="project-container" project-slide></div>
+          </div>
+        </div>
+      </div>
     </div>
-
-  </div>
-</div>
+  </div
+  <aside class="column">
+    TODO
+  </aside>
+</section>
