--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -110,29 +110,7 @@ section#home {
 // TASKS DATES
 
 section#tasks-dates {
-  #tasks-dates-feature-content-container {
-    .date-container{
-      height: inherit;
-      padding-bottom: @footer-height;
-      .date {
-        height: inherit;
-        overflow-y: auto;
-      }
-    }
+  .inner-slide-content-container{
+    padding-bottom: @footer-height;
   }
 }
-
-// TASKS PROJECTS
-
-section#tasks-projects {
-  #tasks-projects-feature-content-container {
-    .project-container{
-      height: inherit;
-      .project {
-        height: inherit;
-        overflow-y: auto;
-      }
-    }
-  }
-}
-
