--- a/frontend/core/src/main/webapp/static/partials/pages/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/tasks/dates.html
@@ -6,7 +6,7 @@
       <div class="swiper-container vertical-slides" em-swiper-slider="vertical">
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="{{date.yyyymmdd}}">
-            <div class="date-container" date-slide="date" date-tasks="tasks"></div>
+            <div class="inner-slide-content-container" date-slide="date" date-tasks="tasks"></div>
           </div>
         </div>
       </div>
