--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -77,7 +77,13 @@ header {
     overflow-y: auto;
     display:block;
   }
-
+  .inner-slide-content-container{
+    height: inherit;
+    section {
+      height: inherit;
+      overflow-y: auto;
+    }
+  }
 }
 
 .content-container {
