Refactored partials. Added no swiping class into header and footer.

--- a/frontend/core/src/main/webapp/static/partials/pages/home.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/home.html
@@ -13,6 +13,7 @@
           <div class="filtered-items" filtered-notes-list="notes" notes-filter="newItem.title"></div>
         </div>
         <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+      </div>
     </div>
   </div>
 </section>
