--- a/frontend/core/src/main/webapp/static/partials/templates/footer.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/footer.html
@@ -1,4 +1,4 @@
-<nav id="footer" class="{{feature}}-footer" role="navigation">
+<nav class="swiper-no-swiping" id="footer" class="{{feature}}-footer" role="navigation">
   <ul>
     <li id="inbox-link" class="footer-link">
       <a href ng-click="gotoInbox()">
