--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -105,25 +105,8 @@ footer {
   li {
     text-align: center;
   }
-}
-
-nav#footer {
-  text-align: justify;
-  * {
-    display: inline;
-  }
-  li.footer-link {
+  .justified-element {
     width: 30px;
-    height: @footer-height;
-    vertical-align: top;
-    display: inline-block;
-    *display: inline;
-  }
-  li#stretch {
-    width: 100%;
-    display: inline-block;
-    font-size: 0;
-    line-height: 0
   }
 }
 
