--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -34,6 +34,10 @@
 @pressed-button: #00baff;
 @link-color: #0f82fe;
 
+@delete-button: #e22c09;
+@pressed-delete-button: #f86f55;
+
+
 // Components
 @plus-button-width: 27px;
 
