--- a/frontend/core/src/main/webapp/static/partials/templates/footer.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/footer.html
@@ -1,24 +1,24 @@
-<nav id="footer" class="{{feature}}-footer" role="navigation">
-  <ul>
-    <li id="inbox-link" class="footer-link">
+<nav class="{{feature}}-footer" role="navigation">
+  <ul class="horizontally-justified">
+    <li id="inbox-link" class="justified-element">
       <a href ng-click="gotoInbox()">
         <span id="inbox-icon" class="icon">i</span>
       </a>
     </li>
     
-    <li id="home-link" class="footer-link">
+    <li id="home-link" class="justified-element">
       <a href ng-click="gotoHome()">
         <span id="home-icon" class="icon">h</span>
       </a>
     </li>
     
-    <li id="tasks-link" class="footer-link">
+    <li id="tasks-link" class="justified-element">
       <a href ng-click="gotoTasks()">
         <span id="tasks-icon" class="icon">t</span>
       </a>
     </li>
     
-    <li id="notes-link" class="footer-link">
+    <li id="notes-link" class="justified-element">
       <a class="disabled" href>
         <span id="notes-icon" class="icon">n</span>
       </a>
