--- a/frontend/core/src/main/webapp/static/partials/templates/items/item.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/item.html
@@ -1,9 +1,6 @@
-<div>
-
+<section class="item">
   <div ng-click="toggleItemContent()">
     <span>{{item.title}}</span>
   </div>
-
   <div item-content ng-show="showItemContent" itemtype="itemType"></div>
-
-</div>
+</section>
