--- a/frontend/core/src/main/webapp/static/partials/pages/login.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/login.html
@@ -20,7 +20,7 @@
             <label class="input-text checkbox" id="remember" for="remember">remember</label>
           </div>
           <div class="form-group button-container">
-            <button type="submit" id="login-button" class="wide-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+            <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
               <span class="button-text">login</span>
             </button>
           </div>
