Icon images replaced by icomoon ttf font pack. Home screen menu button uses font

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,4 +1,4 @@
-@import "icomoon.less";
+@import "icon.less";
 @import "normalize.less";
 @import "variables.less";
 @import "idangerous.swiper.less";
