--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -3,7 +3,7 @@
   type="button" 
   ng-click="collapseNavbar()"
   alt="menu">
-  <span class="icon-menu">icon-menu</span></button>
+  <span class="icon-menu" /></button>
   <div id="menu-content" ng-show="collapse">
     <ul>
       <li>
