--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -52,16 +52,17 @@ section#home {
       width: inherit;
     }
     button#menu-button{
-      background:url('../img/menu.png');
-      background-position: 0 -50px;
+     // background:url('../img/menu.png');
+     // background-position: 0 -50px;
+     background: none;
       cursor:pointer;
       border:none;
       width:29px;
       height:29px;
       display: inline-block; 
-      text-align:center; 
+     // text-align:center; 
       margin: 0px; 
-      border: 0px; 
+     // border: 0px; 
       padding: 0px;
     }
     button#menu-button:active{
