Layout for date picker and add task..

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -106,6 +106,22 @@ section#home {
 // TASKS DATES
 
 section#tasks-dates {
+  #date-picker {
+    width: 100%;
+    overflow-x: auto;
+    table {
+      max-width: 100%;
+      td {
+        padding-right: 0.5em;
+        a {
+          color:@text-gray;
+        }
+        a:active{
+          color:black;
+        }
+      }
+    }
+  }
   .inner-slide-content-container{
     padding-bottom: @footer-height;
   }
