--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -1,10 +1,8 @@
-<form class="form swiper-no-swiping" role="form" name="subtaskToList" ng-submit="add(subtask)">
-
+<form class="swiper-no-swiping" role="form" name="subtaskToList" ng-submit="add(subtask)">
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
-      <input type="text" class="form-control em-simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task...">
+      <input type="text" class="simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task..."></input>
     </div>
   </div>
-
 </form>
