Changed link colors

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -159,6 +159,10 @@ input[type=checkbox].input-checkbox:checked + .input-text {
   background-position: 0 -79px;
 }
 
+input[type=checkbox].input-checkbox:checked ~ span.fade {
+  color:@text-gray;
+}
+
 .checkbox{background-image:url(../img/checkbox.png); }
 
 // BORDERS
