--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -42,6 +42,11 @@ section#home {
       width: auto;
       padding-top: 10px;
       .top-bottom-borders;
+
+      a.collective{
+        color: @text-gray;
+      }
+
     }
     nav {
       max-width: @one-column-grid-width;
