--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -32,7 +32,7 @@
 @inactive-button: @text-gray;
 @active-button: #0f82fe;
 @pressed-button: #00baff;
-@link-color: #0f82fe;
+@link-color: black;
 
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
