First steps to correct indentation

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -6,6 +6,10 @@
   padding-right: @horizontal-grid;
 }
 
+.indent {
+  padding-left: @horizontal-grid;
+}
+
 div[role=main] {
   line-height: @vertical-grid;
   max-height: @maximum-height;
