--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -42,11 +42,9 @@ section#home {
       width: auto;
       padding-top: 10px;
       .top-bottom-borders;
-
       a.collective{
         color: @text-gray;
       }
-
     }
     nav {
       max-width: @one-column-grid-width;
@@ -74,6 +72,7 @@ section#home {
     height:100%;
     .banner {
       padding-top: @vertical-grid * 1.5;
+      padding-bottom: @vertical-grid / 2;
       img {
         width: 67.5px;
         .center-horizontally;
