--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -26,12 +26,9 @@ html {
 
 // HEADINGS
 
-h1 {
-  font-weight: 100;
-}
-
-h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
+  margin:0;
 }
 
 // LINKS
