--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -1,5 +1,7 @@
 <ul>
   <li ng-repeat="context in tags">
-    <span><a class="text-muted" href="#/{{prefix}}/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
+    <a class="click-to-slide" href="#/{{prefix}}/tasks/context/{{context.uuid}}">
+      <span class="link-title">@{{context.title}}</span><span class="slide-indicator">&gt;</span>
+    </a>
   </li>
 </ul>
