--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -5,6 +5,7 @@
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 @default-font-size: 18px; 
+@slide-indicator-width: 5px;
 
 // Columns
 @one-column-grid-width: 480px;
@@ -33,7 +34,6 @@
 @active-button: #0f82fe;
 @pressed-button: #00baff;
 @link-color: black;
-
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
 
