--- a/frontend/core/src/main/webapp/static/partials/templates/items/item.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/item.html
@@ -2,5 +2,5 @@
   <div ng-click="toggleItemContent()">
     <span>{{item.title}}</span>
   </div>
-  <div item-content ng-show="showItemContent" itemtype="itemType"></div>
+  <div item-content ng-show="showItemContent"></div>
 </section>
