--- a/frontend/core/src/main/webapp/static/partials/pages/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/inbox.html
@@ -3,7 +3,7 @@
     <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
       <ul class="inner-feature-content-container">
-        <li ng-class="selected" ng-repeat="item in items">
+        <li ng-class="selected" ng-repeat="item in items" ng-controller="ItemsController">
           <div item></div>
         </li>
       </ul>
