Basic layout for edit and new pages

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -69,6 +69,10 @@ header {
   min-height: @feature-header-height;
 }
 
+.heading-header {
+  text-align: center;
+}
+
 // CONTENT
 
 .feature-content-container {
@@ -88,6 +92,10 @@ header {
       overflow-y: auto;
     }
   }
+}
+
+.simple-content-container{
+  padding-top: @heading-header-height;  
 }
 
 .content-container {
