--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -19,11 +19,10 @@
 @maximum-landscape-height: 769px;
 @fixed-page-height: 500px;
 
-// Main header
+// Headers
 @main-header-height: 60px;
-
-// Feature header
 @feature-header-height: 60px;
+@heading-header-height: 60px;
 
 // Footer
 @footer-height: @vertical-grid;
