--- a/frontend/core/src/main/webapp/static/partials/pages/tasks/new.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/tasks/new.html
@@ -1,19 +1,10 @@
-<div id="em-feature-header-tasks" class="row em-feature-header">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <ul class="nav navbar-nav nav-justified">
-                <li id="em-iconlink">
-                    <a href="#/{{prefix}}"><span class="em-icon">t</span></a>
-                </li>
-                <li id="em-featurelink">
-                    <a class="em-feature" href="#/{{prefix}}/tasks">new</a>
-                </li>
-                <li id="em-addnewbutton">
-                    <button type="button" class="btn em-minus" ng-click="cancelEdit()">-</button>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<div class="no-slides-container">
+  <section id="new-task" class="one-column-grid page">
+    <div class="column">
+      <header class="heading-header">
+        <h3>new task</h3>
+      </header>
+      <div class="content-container simple-content-container" edit-task></div>
+    </div>
+  </section>
 </div>
-
-<div class="row em-scrollable-bottom" edit-task></div>
