--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -17,7 +17,7 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	font-size: 1.5em;
+
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -52,4 +52,10 @@
 }
 .icon-inbox:before {
 	content: "\e609";
+}
+.icon-logo_only:before {
+	content: "\e60a";
+}
+.icon-logo_with_text:before {
+	content: "\e60b";
 }
