--- a/frontend/core/src/main/webapp/static/partials/pages/home.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/home.html
@@ -3,7 +3,8 @@
     <header ng-hide="omniBarActive" main-header id="main-header"></header>
     <div id="main-content-container" class="content-container">
       <div ng-hide="omniBarActive" class="banner">
-        <img src="static/img/em_logo.png" alt="extended mind"/>
+ 
+        <span class="icon-logo_only" />
       </div>
       <div class="content">
         <div class="swiper-no-swiping" omni-bar></div>
