replaced em logo with font (svg)

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -62,6 +62,7 @@ section#home {
       display: inline-block; 
       margin: 0px; 
       padding: 0px;
+      font-size: 1.5em;
     }
     button#menu-button:active{
       background-position: 0 0;
@@ -73,10 +74,11 @@ section#home {
     .banner {
       padding-top: @vertical-grid * 1.5;
       padding-bottom: @vertical-grid / 2;
-      img {
-        width: 67.5px;
+      span {
+        width: 2em;
         .center-horizontally;
         display: block;
+        font-size: 2em;
       }
     }
     .content {
