Replaced footer icons with fonts

--- a/frontend/core/src/main/webapp/static/partials/templates/footer.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/footer.html
@@ -2,25 +2,25 @@
   <ul class="horizontally-justified">
     <li id="inbox-link" class="justified-element">
       <a href ng-click="gotoInbox()">
-        <span id="inbox-icon" class="icon">i</span>
+        <span class="icon-inbox" />
       </a>
     </li>
     
     <li id="home-link" class="justified-element">
       <a href ng-click="gotoHome()">
-        <span id="home-icon" class="icon">h</span>
+        <span class="icon-home" />
       </a>
     </li>
     
     <li id="tasks-link" class="justified-element">
       <a href ng-click="gotoTasks()">
-        <span id="tasks-icon" class="icon">t</span>
+        <span class="icon-tasks" />
       </a>
     </li>
     
     <li id="notes-link" class="justified-element">
       <a class="disabled" href>
-        <span id="notes-icon" class="icon">n</span>
+        <span class="icon-notes" />
       </a>
     </li>
     <li id="stretch"></li>
