--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -12,6 +12,7 @@
 [class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
 	speak: none;
+	font-size: 1.5em;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
