plus icon changed to font -> "fonted". Made class for .buttons

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -111,6 +111,14 @@
 
 // BUTTONS
 
+.button {
+  background: none;
+  cursor: pointer;
+  border: none;
+  border: 0px;
+  display: inline-block; 
+}
+
 .button-container {
   text-align: center;
 }
