--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -54,11 +54,7 @@ section#home {
       width: inherit;
     }
     button#menu-button{
-      background: none;
-      cursor: pointer;
-      border: none;
-      border: 0px;
-      display: inline-block; 
+      .button;
       padding: 0 0 20px 20px !important; // increased clicking area
     }
     button#menu-button:active{
