plus icon centered

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -92,6 +92,10 @@ section#home {
         div#plus-wrapper { 
           display:table-cell;
           width: @plus-button-width;
+          line-height: 100%;
+          button {
+            padding-top: 8px; // quick fix to center the plus button
+          }
         }
       }
       div#filtered-items-container {
