--- a/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/featureHeader.html
@@ -2,6 +2,8 @@
   <div class="left-of-three" id="collective">&nbsp;</div>
   <div class="center-of-three" id="feature-heading"><h3>{{feature}}</h3></div>
   <div class="right-of-three" id="add-new-button">
-    <button type="button" class="plus" ng-click="addNew()">+</button>
+    <button type="button" class="button" ng-click="addNew()">
+      <span class="icon-plus" />
+    </button>
   </div>
 </nav>
