Layout for selection

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -94,6 +94,13 @@
   background-image: none;
 }
 
+select.simple-input {
+  background: none;
+  // Without this the text is slightly indented
+  margin-left:-4px;
+  padding:0;
+}
+
 .click-to-slide{
   display: table;
   width: 100%;
