--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
@@ -20,22 +20,19 @@
   </div>
 
   <div ng-switch-when="task">
-    <div class="row form-group">
-      <label class="sr-only" for="taskContext">context</label>
-      <div class="col-lg-10">
-        <select class="form-control em-simple-input" id="taskContext" ng-model="task.relationships.tags[0]" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
-          <option value="">select context...</option>
-        </select>
-      </div>
-    </div>
-    <div class="row form-group">
+    <div class="form-group">
       <label class="sr-only" for="taskParent">parent</label>
-      <div class="col-lg-10">
-        <select class="form-control em-simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
-          <option value="">select project...</option>
-        </select>
-      </div>
+      <select class="simple-input swiper-no-swiping" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
+        <option value="">select project...</option>
+      </select>
     </div>
+    <div class="form-group">
+      <label class="sr-only" for="taskContext">context</label>
+      <select class="simple-input swiper-no-swiping" id="taskContext" ng-model="task.relationships.tags[0]" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
+        <option value="">select context...</option>
+      </select>
+    </div>
+
     <div class="row em-item-actions">
       <ul class="nav nav-justified em-horizontal-buttons">
         <li class="em-gray-button">
