--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -37,7 +37,7 @@
   <div class="form-group">
     <label class="sr-only" for="taskContext">context</label>
     <div class="col-lg-10">
-      <select class="form-control em-simple-input" id="taskContext" ng-model="task.relationships.tags[0]" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
+      <select class="form-control em-simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
         <option value="">select context...</option>
       </select>
     </div>
