--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -30,12 +30,14 @@
 // Colors
 @text-gray: #c9c9ce;
 @inactive-button: @text-gray;
-@active-button: #0f82fe;
-@pressed-button: #00baff;
+@active-button: #2a2a2a;
+@pressed-button: #545454;
+// Blue versions:
+// @active-button: #0f82fe;
+// @pressed-button: #00baff;
 @link-color: black;
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
-
 
 // Components
 @plus-button-width: 27px;
